--- a/app/src/main/res/layout/item_home_two_below.xml
+++ b/app/src/main/res/layout/item_home_two_below.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/dp_10"
     android:gravity="center_vertical"
     android:orientation="horizontal">
@@ -10,9 +10,9 @@
     <ImageView
         android:id="@+id/iv_1"
         android:layout_width="@dimen/dimen_30dp"
-        android:adjustViewBounds="true"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_10"
+        android:adjustViewBounds="true"
         android:src="@drawable/icon_home_two_1"
         android:visibility="visible" />
 
@@ -27,25 +27,28 @@
         android:visibility="gone" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_10"
-        android:gravity="center">
+        android:layout_weight="1"
+        android:gravity="center|start">
 
         <com.jxkj.fit_5a.conpoment.view.RoundImageView
             android:id="@+id/iv_2"
             android:layout_width="23dp"
             android:layout_height="23dp"
-            app:type="circle"
-            android:src="@drawable/icon_two" />
+            android:src="@drawable/icon_two"
+            app:type="circle" />
 
         <TextView
             android:id="@+id/tv_1"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dimen_5dp"
             android:drawablePadding="@dimen/dimen_5dp"
-            android:gravity="center"
+            android:ellipsize="end"
+            android:gravity="center|start"
+            android:maxLines="1"
             android:text="吴帅帅W"
             android:textColor="@color/color_333333"
             android:textSize="13sp" />
@@ -54,10 +57,8 @@
 
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center">
+        android:layout_width="@dimen/dimen_75dp"
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/tv_2"
@@ -66,8 +67,10 @@
             android:layout_marginStart="@dimen/dp_10"
             android:drawableStart="@drawable/icon_home_huo"
             android:drawablePadding="@dimen/dimen_5dp"
-            android:gravity="center"
-            android:text="1360cal"
+            android:ellipsize="end"
+            android:gravity="start"
+            android:maxLines="1"
+            android:text="0cal"
             android:textColor="@color/color_333333"
             android:textSize="13sp" />
 
@@ -76,10 +79,10 @@
 
     <LinearLayout
         android:id="@+id/ll_dianzan"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/dimen_70dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_10"
-        android:gravity="center">
+        android:gravity="center|end">
 
         <ImageView
             android:id="@+id/iv_3"
