--- a/app/src/main/res/layout/fragment_home_two.xml
+++ b/app/src/main/res/layout/fragment_home_two.xml
@@ -521,7 +521,7 @@
                     android:text="查看更多"
                     android:textColor="@color/color_999999"
                     android:textSize="12sp"
-                    android:visibility="invisible" />
+                    android:visibility="gone" />
 
             </LinearLayout>
 
