--- a/app/src/main/res/layout/dialog_exercise_layout_map.xml
+++ b/app/src/main/res/layout/dialog_exercise_layout_map.xml
@@ -297,11 +297,13 @@
                     android:gravity="center_vertical">
 
                     <ImageView
+                        android:id="@+id/iv_jian"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@mipmap/ic_hp_yd_5" />
 
                     <TextView
+                        android:id="@+id/tv_load"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/dimen_15dp"
@@ -311,6 +313,7 @@
                         android:textStyle="bold" />
 
                     <ImageView
+                        android:id="@+id/iv_jia"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@mipmap/ic_hp_yd_6" />
@@ -321,9 +324,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dimen_3dp"
-                    android:drawableStart="@mipmap/ic_hp_yd_4"
                     android:drawablePadding="@dimen/dimen_2dp"
-                    android:text="阻力"
+                    android:text="当前强度"
                     android:textColor="#4D4D4D"
                     android:textSize="10sp"
                     android:textStyle="bold" />
