--- a/app/src/main/res/layout/item_home_top.xml
+++ b/app/src/main/res/layout/item_home_top.xml
@@ -3,7 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="@dimen/dimen_70dp"
     android:layout_marginStart="@dimen/dp_10"
-    android:gravity="center"
+    android:gravity="center_vertical"
     android:background="@drawable/ic_shade_img"
     android:padding="@dimen/dp_10">
 
