--- a/app/src/main/res/layout/item_history_equipment.xml
+++ b/app/src/main/res/layout/item_history_equipment.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/dp_10"
     android:layout_marginHorizontal="@dimen/dp_10"
+    android:layout_marginTop="@dimen/dp_10"
     android:background="@drawable/bj_circle_fff_10"
     android:orientation="vertical">
 
@@ -59,6 +59,7 @@
             android:textColor="@color/color_333333"
             android:textSize="15sp" />
 
+
         <TextView
             android:id="@+id/tv_time"
             android:layout_width="wrap_content"
@@ -68,6 +69,16 @@
             android:text="2002-15-16"
             android:textColor="@color/color_999999"
             android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/tv_user_name_f"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_time"
+            android:text="无"
+            android:visibility="gone"
+            android:textColor="@color/color_333333"
+            android:textSize="15sp" />
     </RelativeLayout>
 
 
