--- a/app/src/main/res/layout/dialog_exercise_layout_map.xml
+++ b/app/src/main/res/layout/dialog_exercise_layout_map.xml
@@ -213,6 +213,7 @@
                 android:padding="@dimen/dp_10">
 
                 <TextView
+                    android:id="@+id/tv_Incline"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="--"
