--- a/app/src/main/res/layout/dialog_exercise_layout_map.xml
+++ b/app/src/main/res/layout/dialog_exercise_layout_map.xml
@@ -285,10 +285,12 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_load"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:gravity="center"
+                android:visibility="invisible"
                 android:padding="@dimen/dp_10">
 
                 <ImageView
