--- a/app/src/main/res/layout/popup_window_sb.xml
+++ b/app/src/main/res/layout/popup_window_sb.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
@@ -8,6 +8,5 @@
         android:id="@+id/rv_list"
         android:layout_width="@dimen/dimen_200dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:background="#80000000" />
 </RelativeLayout>
