--- a/app/src/main/res/layout/item_topic_list.xml
+++ b/app/src/main/res/layout/item_topic_list.xml
@@ -16,6 +16,7 @@
         android:textSize="14sp" />
 
     <View
+        android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_below="@id/tv1"
