--- a/app/src/main/res/layout/activity_course_pattern.xml
+++ b/app/src/main/res/layout/activity_course_pattern.xml
@@ -90,6 +90,7 @@
                 android:layout_marginHorizontal="@dimen/dimen_15dp"
                 android:background="@drawable/ic_shade_img">
 
+
                 <RelativeLayout
                     android:id="@+id/ll"
                     android:layout_width="wrap_content"
@@ -139,16 +140,15 @@
                         android:scaleType="center"
                         android:src="@drawable/ic_jiajian_jian" />
 
-                    <ImageView
-                        android:id="@+id/iv_hfmr"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="@dimen/dp_10"
-                        android:src="@drawable/ic_hfmr" />
-
                 </RelativeLayout>
-
+                <ImageView
+                    android:id="@+id/iv_hfmr"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="@dimen/dimen_15dp"
+                    android:layout_marginEnd="@dimen/dp_10"
+                    android:src="@drawable/ic_hfmr" />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
