--- a/app/src/main/res/layout/activity_course_pattern.xml
+++ b/app/src/main/res/layout/activity_course_pattern.xml
@@ -15,7 +15,6 @@
             android:id="@+id/iv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
             android:src="@mipmap/ic_task_sele_top"
             android:visibility="invisible" />
 
@@ -35,7 +34,7 @@
             android:layout_height="match_parent"
             android:layout_alignTop="@id/iv"
             android:layout_alignBottom="@id/iv"
-            android:adjustViewBounds="true"
+            android:layout_marginBottom="-20dp"
             android:background="@drawable/btn_shape_bj_fff" />
 
 
