--- a/app/src/main/res/layout/fragment_home_two.xml
+++ b/app/src/main/res/layout/fragment_home_two.xml
@@ -1,63 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_ffffff"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/rl_actionbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dimen_15dp">
 
-        <TextView
-            android:id="@+id/tv_left_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableStart="@drawable/icon_home_left"
-            android:drawablePadding="@dimen/dimen_5dp"
-            android:gravity="center"
-            android:padding="@dimen/dimen_15dp"
-            android:text="设备管理"
-            android:textColor="@color/color_333333"
-            android:textSize="@dimen/dimen_16dp"
-            android:visibility="gone" />
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:padding="@dimen/dp_10"
-            android:text="运 动"
-            android:textColor="@color/color_333333"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tv_right_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:drawableStart="@drawable/icon_home_right"
-            android:gravity="center"
-            android:includeFontPadding="false"
-            android:padding="@dimen/dimen_15dp"
-            android:text="心率"
-            android:textColor="@color/color_333333"
-            android:textSize="@dimen/dimen_16dp"
-            android:visibility="gone" />
-    </RelativeLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_0.5dp"
-        android:background="@color/line_color" />
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/mNestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:overScrollMode="never"
@@ -66,6 +18,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="61dp"
             android:orientation="vertical">
 
 
@@ -528,5 +481,58 @@
 
 
     </androidx.core.widget.NestedScrollView>
+    <RelativeLayout
+        android:id="@+id/rl_actionbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/color_ffffff"
+        android:paddingTop="@dimen/dimen_15dp">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/tv_left_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/icon_home_left"
+            android:drawablePadding="@dimen/dimen_5dp"
+            android:gravity="center"
+            android:padding="@dimen/dimen_15dp"
+            android:text="设备管理"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/dimen_16dp"
+            android:visibility="gone" />
+
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:padding="@dimen/dp_10"
+            android:text="运 动"
+            android:textColor="@color/color_333333"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_right_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:drawableStart="@drawable/icon_home_right"
+            android:gravity="center"
+            android:includeFontPadding="false"
+            android:padding="@dimen/dimen_15dp"
+            android:text="心率"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/dimen_16dp"
+            android:visibility="gone" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_below="@id/tv_title"
+            android:layout_height="@dimen/dimen_0.5dp"
+            android:background="@color/line_color" />
+    </RelativeLayout>
+
+</RelativeLayout>
