--- a/app/src/main/res/layout/activity_rank_list.xml
+++ b/app/src/main/res/layout/activity_rank_list.xml
@@ -46,7 +46,7 @@
                         android:layout_height="22dp"
                         android:background="@drawable/btn_shape_bj_theme_2"
                         android:gravity="center"
-                        android:text="日"
+                        android:text="天"
                         android:textColor="@color/color_000000"
                         android:textSize="12sp" />
 
