--- a/app/src/main/res/layout/item_home_two_top.xml
+++ b/app/src/main/res/layout/item_home_two_top.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="@dimen/dimen_300dp"
+    android:layout_height="280dp"
     android:layout_marginStart="@dimen/dp_10">
 
     <ImageView
@@ -16,6 +16,10 @@
         android:layout_height="match_parent"
         android:layout_alignStart="@id/iv_icon"
         android:layout_alignEnd="@id/iv_icon"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="-1dp"
+        android:layout_marginEnd="1dp"
         android:adjustViewBounds="true"
         android:background="@drawable/btn_shape_bj_000" />
 
@@ -36,10 +40,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_title"
         android:layout_marginStart="@dimen/dimen_20dp"
-        android:text="Online Sports"
+        android:text="Online \nSports"
         android:textColor="@color/color_ffffff"
-        android:textSize="19sp"
-        android:textStyle="bold" />
+        android:textSize="19sp"/>
 
     <TextView
         android:layout_width="wrap_content"
