--- a/app/src/main/res/layout/fragment_home_three.xml
+++ b/app/src/main/res/layout/fragment_home_three.xml
@@ -6,46 +6,6 @@
     android:background="@color/color_ffffff"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/rl_actionbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-        <TextView
-            android:id="@+id/tv_search"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/dimen_50dp"
-            android:layout_marginStart="@dimen/dimen_15dp"
-            android:layout_marginTop="@dimen/dimen_25dp"
-            android:layout_weight="1"
-            android:background="@drawable/ic_shade_img"
-            android:drawableStart="@drawable/ic_search"
-            android:drawablePadding="@dimen/dp_10"
-            android:gravity="center_vertical"
-            android:padding="@dimen/dp_10"
-            android:text="搜索动态"
-            android:textColor="@color/color_999999"
-            android:textFontWeight="1"
-            android:textSize="12sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tv_right_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="@dimen/dimen_15dp"
-            android:layout_marginTop="@dimen/dimen_25dp"
-            android:drawableStart="@drawable/ic_bianji"
-            android:drawablePadding="@dimen/dp_10"
-            android:gravity="center"
-            android:includeFontPadding="false"
-            android:padding="@dimen/dp_10"
-            android:text="动态"
-            android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp_14" />
-    </LinearLayout>
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/refreshLayout"
@@ -56,166 +16,209 @@
         app:srlEnablePreviewInEditMode="true"
         app:srlPrimaryColor="#00000000">
 
-        <com.scwang.smartrefresh.layout.header.ClassicsHeader
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srlClassicsSpinnerStyle="Scale" />
+            android:layout_height="match_parent">
 
-
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:overScrollMode="never"
-            android:scrollbars="none">
-
-            <LinearLayout
+            <androidx.core.widget.NestedScrollView
+                android:id="@+id/mNestedScrollView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/dimen_15dp">
-
-                    <TextView
-                        android:id="@+id/tv1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="加入的圈子"
-                        android:textColor="@color/black"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <View
-                        android:layout_width="@dimen/dp_40"
-                        android:layout_height="@dimen/dimen_2dp"
-                        android:layout_below="@id/tv1"
-                        android:layout_marginTop="-5dp"
-                        android:background="@drawable/line_shape_bj_select" />
-
-                    <TextView
-                        android:id="@+id/tv_refresh"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:drawableEnd="@drawable/ic_refresh"
-                        android:drawablePadding="@dimen/dimen_5dp"
-                        android:gravity="center_vertical"
-                        android:text="换一批"
-                        android:textColor="@color/color_999999"
-                        android:textSize="12sp" />
-
-
-                </RelativeLayout>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_top_list"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dp_10"
-                    android:overScrollMode="never" />
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/dimen_15dp">
-
-                    <TextView
-                        android:id="@+id/tv2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="热门话题"
-                        android:textColor="@color/black"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <View
-                        android:layout_width="@dimen/dp_40"
-                        android:layout_height="@dimen/dimen_2dp"
-                        android:layout_below="@id/tv2"
-                        android:layout_marginTop="-5dp"
-                        android:background="@drawable/line_shape_bj_select" />
-
-                    <TextView
-                        android:id="@+id/tv_topic_all"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:drawableEnd="@drawable/icon_jiantou_you_99"
-                        android:drawablePadding="@dimen/dimen_5dp"
-                        android:gravity="center_vertical"
-                        android:text="所有话题"
-                        android:textColor="@color/color_999999"
-                        android:textSize="12sp" />
-
-
-                </RelativeLayout>
+                android:overScrollMode="never"
+                android:scrollbars="none">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/dp_10"
-                    android:background="@drawable/ic_shade_img"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="65dp"
                     android:orientation="vertical">
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rv_rmht_list"
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:padding="@dimen/dimen_15dp">
+
+                        <TextView
+                            android:id="@+id/tv1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="加入的圈子"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+
+                        <View
+                            android:layout_width="@dimen/dp_40"
+                            android:layout_height="@dimen/dimen_2dp"
+                            android:layout_below="@id/tv1"
+                            android:layout_marginTop="-5dp"
+                            android:background="@drawable/line_shape_bj_select" />
+
+                        <TextView
+                            android:id="@+id/tv_refresh"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:drawableEnd="@drawable/ic_refresh"
+                            android:drawablePadding="@dimen/dimen_5dp"
+                            android:gravity="center_vertical"
+                            android:text="换一批"
+                            android:textColor="@color/color_999999"
+                            android:textSize="12sp" />
+
+
+                    </RelativeLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_top_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/dp_10"
                         android:overScrollMode="never" />
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/dimen_15dp">
+
+                        <TextView
+                            android:id="@+id/tv2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="热门话题"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+
+                        <View
+                            android:layout_width="@dimen/dp_40"
+                            android:layout_height="@dimen/dimen_2dp"
+                            android:layout_below="@id/tv2"
+                            android:layout_marginTop="-5dp"
+                            android:background="@drawable/line_shape_bj_select" />
+
+                        <TextView
+                            android:id="@+id/tv_topic_all"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:drawableEnd="@drawable/icon_jiantou_you_99"
+                            android:drawablePadding="@dimen/dimen_5dp"
+                            android:gravity="center_vertical"
+                            android:text="所有话题"
+                            android:textColor="@color/color_999999"
+                            android:textSize="12sp" />
+
+
+                    </RelativeLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/dp_10"
+                        android:background="@drawable/ic_shade_img"
+                        android:orientation="vertical">
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/rv_rmht_list"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:overScrollMode="never" />
+
+                    </LinearLayout>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/dimen_15dp">
+
+                        <TextView
+                            android:id="@+id/tv3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="社区"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+
+                        <View
+                            android:layout_width="@dimen/dp_40"
+                            android:layout_height="@dimen/dimen_2dp"
+                            android:layout_below="@id/tv3"
+                            android:layout_marginTop="-5dp"
+                            android:background="@drawable/line_shape_bj_select" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:drawableEnd="@drawable/icon_jiantou_you_99"
+                            android:drawablePadding="@dimen/dimen_5dp"
+                            android:gravity="center_vertical"
+                            android:text="所有话题"
+                            android:textColor="@color/color_999999"
+                            android:textSize="12sp"
+                            android:visibility="invisible" />
+
+
+                    </RelativeLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_sq_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/line_color"
+                        android:overScrollMode="never"
+                        android:paddingHorizontal="@dimen/dimen_5dp" />
+
 
                 </LinearLayout>
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
+
+            </androidx.core.widget.NestedScrollView>
+
+            <LinearLayout
+                android:id="@+id/rl_actionbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/color_ffffff">
+
+
+                <TextView
+                    android:id="@+id/tv_search"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/dimen_50dp"
+                    android:layout_marginStart="@dimen/dimen_15dp"
+                    android:layout_marginTop="@dimen/dimen_25dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/ic_shade_img"
+                    android:drawableStart="@drawable/ic_search"
+                    android:drawablePadding="@dimen/dp_10"
+                    android:gravity="center_vertical"
+                    android:padding="@dimen/dp_10"
+                    android:text="搜索动态"
+                    android:textColor="@color/color_999999"
+                    android:textFontWeight="1"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tv_right_text"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/dimen_15dp">
-
-                    <TextView
-                        android:id="@+id/tv3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="社区"
-                        android:textColor="@color/black"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <View
-                        android:layout_width="@dimen/dp_40"
-                        android:layout_height="@dimen/dimen_2dp"
-                        android:layout_below="@id/tv3"
-                        android:layout_marginTop="-5dp"
-                        android:background="@drawable/line_shape_bj_select" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:drawableEnd="@drawable/icon_jiantou_you_99"
-                        android:drawablePadding="@dimen/dimen_5dp"
-                        android:gravity="center_vertical"
-                        android:text="所有话题"
-                        android:textColor="@color/color_999999"
-                        android:textSize="12sp"
-                        android:visibility="invisible" />
-
-
-                </RelativeLayout>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_sq_list"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/line_color"
-                    android:overScrollMode="never"
-                    android:paddingHorizontal="@dimen/dimen_5dp" />
-
-
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="@dimen/dimen_15dp"
+                    android:layout_marginTop="@dimen/dimen_25dp"
+                    android:drawableStart="@drawable/ic_bianji"
+                    android:drawablePadding="@dimen/dp_10"
+                    android:gravity="center"
+                    android:includeFontPadding="false"
+                    android:padding="@dimen/dp_10"
+                    android:text="动态"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_14" />
             </LinearLayout>
-
-
-        </androidx.core.widget.NestedScrollView>
+        </RelativeLayout>
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
 </LinearLayout>
