--- a/app/src/main/res/layout/fragment_mine_gift.xml
+++ b/app/src/main/res/layout/fragment_mine_gift.xml
@@ -50,7 +50,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="还没有商品哦~"
+            android:text="还没有礼物哦~"
             android:textColor="@color/color_999999"
             android:textSize="@dimen/sp_14" />
     </LinearLayout>
