--- a/app/src/main/res/layout/fragment_mine_yhq.xml
+++ b/app/src/main/res/layout/fragment_mine_yhq.xml
@@ -83,7 +83,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="还没有商品哦~"
+            android:text="还没有优惠券哦~"
             android:textColor="@color/color_999999"
             android:textSize="@dimen/sp_14" />
     </LinearLayout>
